--- a/Card Gacha/cardGacha.html
+++ b/Card Gacha/cardGacha.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Card Rarities</title>
+    <title>Card Gacha</title>
     <meta name="description" content="Card Rarity Showcase">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <button id="pull-button">Pull x10</button>
+    <button id="pull-button">Pull</button>
     <div class="card-container" id="main-card-container">
         <!--
         <div class="card common"><div class="card-title">Common</div><div class="card-middle">Stuff</div><div class="star-container" data-rarity="common"></div></div>
